packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsFutureCalls__c.field-meta.xml
<CustomField>
    <fullName>LimitsFutureCalls__c</fullName>
    <description>Future Calls usage as percentage of transaction total. Shows warning (30%) and danger (50%) thresholds to identify resource-heavy work items.</description>
    <formula>IF(
  ISBLANK(LimitsFutureCallsConsumed__c) ||
  ISBLANK(AuditTransaction__r.LimitsFutureCallsConsumed__c) ||
  AuditTransaction__r.LimitsFutureCallsConsumed__c = 0,
  &quot;N/A&quot;,
  IF(LimitsFutureCallsConsumed__c / AuditTransaction__r.LimitsFutureCallsConsumed__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.FutureCalls.WorkItemRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsFutureCallsConsumed__c / AuditTransaction__r.LimitsFutureCallsConsumed__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.FutureCalls.WorkItemAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsFutureCallsConsumed__c / AuditTransaction__r.LimitsFutureCallsConsumed__c * 100, 1)) &amp; &quot;% of txn (&quot;
  &amp; TEXT(LimitsFutureCallsConsumed__c) &amp; &quot; / &quot; &amp; TEXT(AuditTransaction__r.LimitsFutureCallsConsumed__c) &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Future Calls usage as percentage of transaction total. Shows warning (30%) and danger (50%) thresholds to identify resource-heavy work items.</inlineHelpText>
    <label>Future Calls</label>
    <type>Text</type>
</CustomField>