packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsFutureCallsAtEnd__c.field-meta.xml
<CustomField>
    <fullName>LimitsFutureCallsAtEnd__c</fullName>
    <description>Future calls used after this operation completed.</description>
    <inlineHelpText>Future calls used after this operation completed.</inlineHelpText>
    <label>Future Calls At End</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>