packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsFutureCallsAtStart__c.field-meta.xml
<CustomField>
    <fullName>LimitsFutureCallsAtStart__c</fullName>
    <description>Future calls used before this operation started.</description>
    <inlineHelpText>Future calls used before this operation started.</inlineHelpText>
    <label>Future Calls At Start</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>