packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsFutureCallsConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsFutureCallsConsumed__c</fullName>
    <description>Formula: Future calls consumed by this operation.</description>
    <formula>IF(
    AND(NOT(ISBLANK(LimitsFutureCallsAtEnd__c)), NOT(ISBLANK(LimitsFutureCallsAtStart__c))),
    LimitsFutureCallsAtEnd__c - LimitsFutureCallsAtStart__c,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Future calls consumed by this operation.</inlineHelpText>
    <label>Future Calls Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>