packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsHeapSize__c.field-meta.xml
<CustomField>
    <fullName>LimitsHeapSize__c</fullName>
    <description>Heap Size usage as percentage of transaction total. Shows warning (30%) and danger (50%) thresholds to identify resource-heavy work items.</description>
    <formula>IF(
  ISBLANK(LimitsHeapSizeConsumed__c) ||
  ISBLANK(AuditTransaction__r.LimitsHeapSizeConsumed__c) ||
  AuditTransaction__r.LimitsHeapSizeConsumed__c = 0,
  &quot;N/A&quot;,
  IF(LimitsHeapSizeConsumed__c / AuditTransaction__r.LimitsHeapSizeConsumed__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.HeapSize.WorkItemRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsHeapSizeConsumed__c / AuditTransaction__r.LimitsHeapSizeConsumed__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.HeapSize.WorkItemAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsHeapSizeConsumed__c / AuditTransaction__r.LimitsHeapSizeConsumed__c * 100, 1)) &amp; &quot;% of txn (&quot;
  &amp; TEXT(LimitsHeapSizeConsumed__c) &amp; &quot; / &quot; &amp; TEXT(AuditTransaction__r.LimitsHeapSizeConsumed__c) &amp; &quot; bytes)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Heap Size usage as percentage of transaction total. Shows warning (30%) and danger (50%) thresholds to identify resource-heavy work items.</inlineHelpText>
    <label>Heap Size</label>
    <type>Text</type>
</CustomField>