packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsHeapSizeAtEnd__c.field-meta.xml
<CustomField>
    <fullName>LimitsHeapSizeAtEnd__c</fullName>
    <description>Heap size used after this operation completed (bytes).</description>
    <inlineHelpText>Heap size used after this operation completed (bytes).</inlineHelpText>
    <label>Heap Size At End</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>