packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsHeapSizeAtStart__c.field-meta.xml
<CustomField>
    <fullName>LimitsHeapSizeAtStart__c</fullName>
    <description>Heap size used before this operation started (bytes).</description>
    <inlineHelpText>Heap size used before this operation started (bytes).</inlineHelpText>
    <label>Heap Size At Start</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>