packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsHeapSizeConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsHeapSizeConsumed__c</fullName>
    <description>Formula: Heap size consumed by this operation (bytes).</description>
    <formula>IF(
    AND(NOT(ISBLANK(LimitsHeapSizeAtEnd__c)), NOT(ISBLANK(LimitsHeapSizeAtStart__c))),
    LimitsHeapSizeAtEnd__c - LimitsHeapSizeAtStart__c,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Heap size consumed by this operation (bytes).</inlineHelpText>
    <label>Heap Size Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>