packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsMobilePushApexCalls__c.field-meta.xml
<CustomField>
    <fullName>LimitsMobilePushApexCalls__c</fullName>
    <description>Mobile Push Apex Calls usage as percentage of transaction total. Shows warning (30%) and danger (50%) thresholds to identify resource-heavy work items.</description>
    <formula>IF(
  ISBLANK(LimitsMobilePushApexCallsConsumed__c) ||
  ISBLANK(AuditTransaction__r.LimitsMobilePushApexCallsConsumed__c) ||
  AuditTransaction__r.LimitsMobilePushApexCallsConsumed__c = 0,
  &quot;N/A&quot;,
  IF(LimitsMobilePushApexCallsConsumed__c / AuditTransaction__r.LimitsMobilePushApexCallsConsumed__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.MobilePushApexCalls.WorkItemRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsMobilePushApexCallsConsumed__c / AuditTransaction__r.LimitsMobilePushApexCallsConsumed__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.MobilePushApexCalls.WorkItemAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsMobilePushApexCallsConsumed__c / AuditTransaction__r.LimitsMobilePushApexCallsConsumed__c * 100, 1)) &amp; &quot;% of txn (&quot;
  &amp; TEXT(LimitsMobilePushApexCallsConsumed__c) &amp; &quot; / &quot; &amp; TEXT(AuditTransaction__r.LimitsMobilePushApexCallsConsumed__c) &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Mobile Push Apex Calls usage as percentage of transaction total. Shows warning (30%) and danger (50%) thresholds to identify resource-heavy work items.</inlineHelpText>
    <label>Mobile Push Apex Calls</label>
    <type>Text</type>
</CustomField>