packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsMobilePushApexCallsAtEnd__c.field-meta.xml
<CustomField>
    <fullName>LimitsMobilePushApexCallsAtEnd__c</fullName>
    <description>Mobile push Apex calls used after this operation completed.</description>
    <inlineHelpText>Mobile push Apex calls used after this operation completed.</inlineHelpText>
    <label>Mobile Push Apex Calls At End</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>