packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsMobilePushApexCallsAtStart__c.field-meta.xml
<CustomField>
    <fullName>LimitsMobilePushApexCallsAtStart__c</fullName>
    <description>Mobile push Apex calls used before this operation started.</description>
    <inlineHelpText>Mobile push Apex calls used before this operation started.</inlineHelpText>
    <label>Mobile Push Apex Calls At Start</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>