packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsMobilePushApexCallsConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsMobilePushApexCallsConsumed__c</fullName>
    <description>Formula: Mobile push Apex calls consumed by this operation.</description>
    <formula>IF(
    AND(NOT(ISBLANK(LimitsMobilePushApexCallsAtEnd__c)), NOT(ISBLANK(LimitsMobilePushApexCallsAtStart__c))),
    LimitsMobilePushApexCallsAtEnd__c - LimitsMobilePushApexCallsAtStart__c,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Mobile push Apex calls consumed by this operation.</inlineHelpText>
    <label>Mobile Push Apex Calls Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>