packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsPublishImmediateDml__c.field-meta.xml
<CustomField>
    <fullName>LimitsPublishImmediateDml__c</fullName>
    <description>Publish Immediate DML usage as percentage of transaction total. Shows warning (30%) and danger (50%) thresholds to identify resource-heavy work items.</description>
    <formula>IF(
  ISBLANK(LimitsPublishImmediateDmlConsumed__c) ||
  ISBLANK(AuditTransaction__r.LimitsPublishImmediateDmlConsumed__c) ||
  AuditTransaction__r.LimitsPublishImmediateDmlConsumed__c = 0,
  &quot;N/A&quot;,
  IF(LimitsPublishImmediateDmlConsumed__c / AuditTransaction__r.LimitsPublishImmediateDmlConsumed__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.PublishImmediateDml.WorkItemRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsPublishImmediateDmlConsumed__c / AuditTransaction__r.LimitsPublishImmediateDmlConsumed__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.PublishImmediateDml.WorkItemAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsPublishImmediateDmlConsumed__c / AuditTransaction__r.LimitsPublishImmediateDmlConsumed__c * 100, 1)) &amp; &quot;% of txn (&quot;
  &amp; TEXT(LimitsPublishImmediateDmlConsumed__c) &amp; &quot; / &quot; &amp; TEXT(AuditTransaction__r.LimitsPublishImmediateDmlConsumed__c) &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Publish Immediate DML usage as percentage of transaction total. Shows warning (30%) and danger (50%) thresholds to identify resource-heavy work items.</inlineHelpText>
    <label>Publish Immediate DML</label>
    <type>Text</type>
</CustomField>