packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsPublishImmediateDmlAtEnd__c.field-meta.xml
<CustomField>
    <fullName>LimitsPublishImmediateDmlAtEnd__c</fullName>
    <description>Publish immediate DML operations used after this operation completed.</description>
    <inlineHelpText>Publish immediate DML operations used after this operation completed.</inlineHelpText>
    <label>Publish Immediate DML At End</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>