packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsPublishImmediateDmlAtStart__c.field-meta.xml
<CustomField>
    <fullName>LimitsPublishImmediateDmlAtStart__c</fullName>
    <description>Publish immediate DML operations used before this operation started.</description>
    <inlineHelpText>Publish immediate DML operations used before this operation started.</inlineHelpText>
    <label>Publish Immediate DML At Start</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>