packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsPublishImmediateDmlConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsPublishImmediateDmlConsumed__c</fullName>
    <description>Formula: Publish immediate DML operations consumed by this operation.</description>
    <formula>IF(
    AND(NOT(ISBLANK(LimitsPublishImmediateDmlAtEnd__c)), NOT(ISBLANK(LimitsPublishImmediateDmlAtStart__c))),
    LimitsPublishImmediateDmlAtEnd__c - LimitsPublishImmediateDmlAtStart__c,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Publish immediate DML operations consumed by this operation.</inlineHelpText>
    <label>Publish Immediate DML Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>