packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsQueryLocatorRows__c.field-meta.xml
<CustomField>
    <fullName>LimitsQueryLocatorRows__c</fullName>
    <description>Query Locator Rows usage as percentage of transaction total. Shows warning (30%) and danger (50%) thresholds to identify resource-heavy work items.</description>
    <formula>IF(
  ISBLANK(LimitsQueryLocatorRowsConsumed__c) ||
  ISBLANK(AuditTransaction__r.LimitsQueryLocatorRowsConsumed__c) ||
  AuditTransaction__r.LimitsQueryLocatorRowsConsumed__c = 0,
  &quot;N/A&quot;,
  IF(LimitsQueryLocatorRowsConsumed__c / AuditTransaction__r.LimitsQueryLocatorRowsConsumed__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.QueryLocatorRows.WorkItemRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsQueryLocatorRowsConsumed__c / AuditTransaction__r.LimitsQueryLocatorRowsConsumed__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.QueryLocatorRows.WorkItemAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsQueryLocatorRowsConsumed__c / AuditTransaction__r.LimitsQueryLocatorRowsConsumed__c * 100, 1)) &amp; &quot;% of txn (&quot;
  &amp; TEXT(LimitsQueryLocatorRowsConsumed__c) &amp; &quot; / &quot; &amp; TEXT(AuditTransaction__r.LimitsQueryLocatorRowsConsumed__c) &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Query Locator Rows usage as percentage of transaction total. Shows warning (30%) and danger (50%) thresholds to identify resource-heavy work items.</inlineHelpText>
    <label>Query Locator Rows</label>
    <type>Text</type>
</CustomField>