packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsQueryLocatorRowsAtEnd__c.field-meta.xml
<CustomField>
    <fullName>LimitsQueryLocatorRowsAtEnd__c</fullName>
    <description>Query locator rows used after this operation completed.</description>
    <inlineHelpText>Query locator rows used after this operation completed.</inlineHelpText>
    <label>Query Locator Rows At End</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>