packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsQueryLocatorRowsAtStart__c.field-meta.xml
<CustomField>
    <fullName>LimitsQueryLocatorRowsAtStart__c</fullName>
    <description>Query locator rows used before this operation started.</description>
    <inlineHelpText>Query locator rows used before this operation started.</inlineHelpText>
    <label>Query Locator Rows At Start</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>