packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsQueryLocatorRowsConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsQueryLocatorRowsConsumed__c</fullName>
    <description>Formula: Query locator rows consumed by this operation.</description>
    <formula>IF(
    AND(NOT(ISBLANK(LimitsQueryLocatorRowsAtEnd__c)), NOT(ISBLANK(LimitsQueryLocatorRowsAtStart__c))),
    LimitsQueryLocatorRowsAtEnd__c - LimitsQueryLocatorRowsAtStart__c,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Query locator rows consumed by this operation.</inlineHelpText>
    <label>Query Locator Rows Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>