packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsQueueableJobs__c.field-meta.xml
<CustomField>
    <fullName>LimitsQueueableJobs__c</fullName>
    <description>Queueable Jobs usage as percentage of transaction total. Shows warning (30%) and danger (50%) thresholds to identify resource-heavy work items.</description>
    <formula>IF(
  ISBLANK(LimitsQueueableJobsConsumed__c) ||
  ISBLANK(AuditTransaction__r.LimitsQueueableJobsConsumed__c) ||
  AuditTransaction__r.LimitsQueueableJobsConsumed__c = 0,
  &quot;N/A&quot;,
  IF(LimitsQueueableJobsConsumed__c / AuditTransaction__r.LimitsQueueableJobsConsumed__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.QueueableJobs.WorkItemRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsQueueableJobsConsumed__c / AuditTransaction__r.LimitsQueueableJobsConsumed__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.QueueableJobs.WorkItemAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsQueueableJobsConsumed__c / AuditTransaction__r.LimitsQueueableJobsConsumed__c * 100, 1)) &amp; &quot;% of txn (&quot;
  &amp; TEXT(LimitsQueueableJobsConsumed__c) &amp; &quot; / &quot; &amp; TEXT(AuditTransaction__r.LimitsQueueableJobsConsumed__c) &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Queueable Jobs usage as percentage of transaction total. Shows warning (30%) and danger (50%) thresholds to identify resource-heavy work items.</inlineHelpText>
    <label>Queueable Jobs</label>
    <type>Text</type>
</CustomField>