packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsQueueableJobsAtEnd__c.field-meta.xml
<CustomField>
    <fullName>LimitsQueueableJobsAtEnd__c</fullName>
    <description>Queueable jobs used after this operation completed.</description>
    <inlineHelpText>Queueable jobs used after this operation completed.</inlineHelpText>
    <label>Queueable Jobs At End</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>