packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsQueueableJobsAtStart__c.field-meta.xml
<CustomField>
    <fullName>LimitsQueueableJobsAtStart__c</fullName>
    <description>Queueable jobs used before this operation started.</description>
    <inlineHelpText>Queueable jobs used before this operation started.</inlineHelpText>
    <label>Queueable Jobs At Start</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>