packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsQueueableJobsConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsQueueableJobsConsumed__c</fullName>
    <description>Formula: Queueable jobs consumed by this operation.</description>
    <formula>IF(
    AND(NOT(ISBLANK(LimitsQueueableJobsAtEnd__c)), NOT(ISBLANK(LimitsQueueableJobsAtStart__c))),
    LimitsQueueableJobsAtEnd__c - LimitsQueueableJobsAtStart__c,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Queueable jobs consumed by this operation.</inlineHelpText>
    <label>Queueable Jobs Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>