packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsSoqlQueries__c.field-meta.xml
<CustomField>
    <fullName>LimitsSoqlQueries__c</fullName>
    <description>SOQL Queries usage as percentage of transaction total. Shows warning (30%) and danger (50%) thresholds to identify resource-heavy work items.</description>
    <formula>IF(
  ISBLANK(LimitsSoqlQueriesConsumed__c) ||
  ISBLANK(AuditTransaction__r.LimitsSoqlQueriesConsumed__c) ||
  AuditTransaction__r.LimitsSoqlQueriesConsumed__c = 0,
  &quot;N/A&quot;,
  IF(LimitsSoqlQueriesConsumed__c / AuditTransaction__r.LimitsSoqlQueriesConsumed__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.SoqlQueries.WorkItemRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsSoqlQueriesConsumed__c / AuditTransaction__r.LimitsSoqlQueriesConsumed__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.SoqlQueries.WorkItemAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsSoqlQueriesConsumed__c / AuditTransaction__r.LimitsSoqlQueriesConsumed__c * 100, 1)) &amp; &quot;% of txn (&quot;
  &amp; TEXT(LimitsSoqlQueriesConsumed__c) &amp; &quot; / &quot; &amp; TEXT(AuditTransaction__r.LimitsSoqlQueriesConsumed__c) &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>SOQL Queries usage as percentage of transaction total. Shows warning (30%) and danger (50%) thresholds to identify resource-heavy work items.</inlineHelpText>
    <label>SOQL Queries</label>
    <type>Text</type>
</CustomField>