packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsSoqlQueriesAtEnd__c.field-meta.xml
<CustomField>
    <fullName>LimitsSoqlQueriesAtEnd__c</fullName>
    <description>SOQL queries used after this operation completed.</description>
    <inlineHelpText>SOQL queries used after this operation completed.</inlineHelpText>
    <label>SOQL Queries At End</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>