packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsSoqlQueriesAtStart__c.field-meta.xml
<CustomField>
    <fullName>LimitsSoqlQueriesAtStart__c</fullName>
    <description>SOQL queries used before this operation started.</description>
    <inlineHelpText>SOQL queries used before this operation started.</inlineHelpText>
    <label>SOQL Queries At Start</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>