packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsSoqlQueriesConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsSoqlQueriesConsumed__c</fullName>
    <description>Formula: SOQL queries consumed by this operation.</description>
    <formula>IF(
    AND(NOT(ISBLANK(LimitsSoqlQueriesAtEnd__c)), NOT(ISBLANK(LimitsSoqlQueriesAtStart__c))),
    LimitsSoqlQueriesAtEnd__c - LimitsSoqlQueriesAtStart__c,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: SOQL queries consumed by this operation.</inlineHelpText>
    <label>SOQL Queries Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>