packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsSoqlRows__c.field-meta.xml
<CustomField>
    <fullName>LimitsSoqlRows__c</fullName>
    <description>SOQL Rows usage as percentage of transaction total. Shows warning (30%) and danger (50%) thresholds to identify resource-heavy work items.</description>
    <formula>IF(
  ISBLANK(LimitsSoqlRowsConsumed__c) ||
  ISBLANK(AuditTransaction__r.LimitsSoqlRowsConsumed__c) ||
  AuditTransaction__r.LimitsSoqlRowsConsumed__c = 0,
  &quot;N/A&quot;,
  IF(LimitsSoqlRowsConsumed__c / AuditTransaction__r.LimitsSoqlRowsConsumed__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.SoqlRows.WorkItemRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsSoqlRowsConsumed__c / AuditTransaction__r.LimitsSoqlRowsConsumed__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.SoqlRows.WorkItemAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsSoqlRowsConsumed__c / AuditTransaction__r.LimitsSoqlRowsConsumed__c * 100, 1)) &amp; &quot;% of txn (&quot;
  &amp; TEXT(LimitsSoqlRowsConsumed__c) &amp; &quot; / &quot; &amp; TEXT(AuditTransaction__r.LimitsSoqlRowsConsumed__c) &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>SOQL Rows usage as percentage of transaction total. Shows warning (30%) and danger (50%) thresholds to identify resource-heavy work items.</inlineHelpText>
    <label>SOQL Rows</label>
    <type>Text</type>
</CustomField>