packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsSoqlRowsAtEnd__c.field-meta.xml
<CustomField>
    <fullName>LimitsSoqlRowsAtEnd__c</fullName>
    <description>SOQL rows used after this operation completed.</description>
    <inlineHelpText>SOQL rows used after this operation completed.</inlineHelpText>
    <label>SOQL Rows At End</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>