packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsSoqlRowsAtStart__c.field-meta.xml
<CustomField>
    <fullName>LimitsSoqlRowsAtStart__c</fullName>
    <description>SOQL rows used before this operation started.</description>
    <inlineHelpText>SOQL rows used before this operation started.</inlineHelpText>
    <label>SOQL Rows At Start</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>