packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsSoqlRowsConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsSoqlRowsConsumed__c</fullName>
    <description>Formula: SOQL rows consumed by this operation.</description>
    <formula>IF(
    AND(NOT(ISBLANK(LimitsSoqlRowsAtEnd__c)), NOT(ISBLANK(LimitsSoqlRowsAtStart__c))),
    LimitsSoqlRowsAtEnd__c - LimitsSoqlRowsAtStart__c,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: SOQL rows consumed by this operation.</inlineHelpText>
    <label>SOQL Rows Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>