packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsSoslSearches__c.field-meta.xml
<CustomField>
    <fullName>LimitsSoslSearches__c</fullName>
    <description>SOSL Searches usage as percentage of transaction total. Shows warning (30%) and danger (50%) thresholds to identify resource-heavy work items.</description>
    <formula>IF(
  ISBLANK(LimitsSoslSearchesConsumed__c) ||
  ISBLANK(AuditTransaction__r.LimitsSoslSearchesConsumed__c) ||
  AuditTransaction__r.LimitsSoslSearchesConsumed__c = 0,
  &quot;N/A&quot;,
  IF(LimitsSoslSearchesConsumed__c / AuditTransaction__r.LimitsSoslSearchesConsumed__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.SoslSearches.WorkItemRedPercent__c / 100, &quot;⛔&quot;,
    IF(LimitsSoslSearchesConsumed__c / AuditTransaction__r.LimitsSoslSearchesConsumed__c &gt;= $CustomMetadata.UoWLimitsThreshold__mdt.SoslSearches.WorkItemAmberPercent__c / 100, &quot;⚠️&quot;, &quot;✅&quot;)
  )
  &amp; &quot; &quot; &amp; TEXT(ROUND(LimitsSoslSearchesConsumed__c / AuditTransaction__r.LimitsSoslSearchesConsumed__c * 100, 1)) &amp; &quot;% of txn (&quot;
  &amp; TEXT(LimitsSoslSearchesConsumed__c) &amp; &quot; / &quot; &amp; TEXT(AuditTransaction__r.LimitsSoslSearchesConsumed__c) &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>SOSL Searches usage as percentage of transaction total. Shows warning (30%) and danger (50%) thresholds to identify resource-heavy work items.</inlineHelpText>
    <label>SOSL Searches</label>
    <type>Text</type>
</CustomField>