packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsSoslSearchesAtEnd__c.field-meta.xml
<CustomField>
    <fullName>LimitsSoslSearchesAtEnd__c</fullName>
    <description>SOSL searches used after this operation completed.</description>
    <inlineHelpText>SOSL searches used after this operation completed.</inlineHelpText>
    <label>SOSL Searches At End</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>