packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsSoslSearchesAtStart__c.field-meta.xml
<CustomField>
    <fullName>LimitsSoslSearchesAtStart__c</fullName>
    <description>SOSL searches used before this operation started.</description>
    <inlineHelpText>SOSL searches used before this operation started.</inlineHelpText>
    <label>SOSL Searches At Start</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>