packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/LimitsSoslSearchesConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsSoslSearchesConsumed__c</fullName>
    <description>Formula: SOSL searches consumed by this operation.</description>
    <formula>IF(
    AND(NOT(ISBLANK(LimitsSoslSearchesAtEnd__c)), NOT(ISBLANK(LimitsSoslSearchesAtStart__c))),
    LimitsSoslSearchesAtEnd__c - LimitsSoslSearchesAtStart__c,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: SOSL searches consumed by this operation.</inlineHelpText>
    <label>SOSL Searches Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>