packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/MaskingApplied__c.field-meta.xml
<CustomField>
    <fullName>MaskingApplied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if data masking was applied to records in this operation.</description>
    <inlineHelpText>Indicates if data masking was applied to records in this operation.</inlineHelpText>
    <label>Masking Applied</label>
    <type>Checkbox</type>
</CustomField>