packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/NotificationType__c.field-meta.xml
<CustomField>
    <fullName>NotificationType__c</fullName>
    <description>Custom notification type developer name. Only populated for NOTIFICATION work type.</description>
    <inlineHelpText>Custom notification type developer name. Only populated for NOTIFICATION work type.</inlineHelpText>
    <label>Notification Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>