packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/OriginApiVersion__c.field-meta.xml
<CustomField>
    <fullName>OriginApiVersion__c</fullName>
    <description>API version of the origin Apex class (e.g., 65.0). Extracted from OriginSourceMetadata for filtering and reporting.</description>
    <inlineHelpText>API version of the origin Apex class (e.g., 65.0). Extracted from OriginSourceMetadata for filtering and reporting.</inlineHelpText>
    <label>Origin API Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>