packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/OriginClassName__c.field-meta.xml
<CustomField>
    <fullName>OriginClassName__c</fullName>
    <description>The actual ApexClass or ApexTrigger name that contains the origin code. For inner classes, this is the outer class name (used for querying metadata).</description>
    <inlineHelpText>The actual ApexClass or ApexTrigger name that contains the origin code. For inner classes, this is the outer class name (used for querying metadata).</inlineHelpText>
    <label>Origin Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>