packages/uow-audit/main/default/objects/UoWAuditWorkItem__c/fields/OriginLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>OriginLastModifiedDate__c</fullName>
    <description>The last modified date of the ApexClass/ApexTrigger at the time this audit record was created. Used to detect if source code has been modified since capture.</description>
    <inlineHelpText>The last modified date of the ApexClass/ApexTrigger at the time this audit record was created. Used to detect if source code has been modified since capture.</inlineHelpText>
    <label>Origin Last Modified Date</label>
    <type>DateTime</type>
</CustomField>